--- a/Readme
+++ b/Readme
@@ -1,1 +1,1 @@
-Neste projeto tem como principal finalidade aprimorar competências e habilidades na linguagem de programação JavaScript. O objetivo primordial consiste na expansão do conhecimento e na melhoria das aptidões, com ênfase na capacidade de aplicar essas habilidades de maneira eficaz e proficiente em cenários práticos.
+The main purpose of this project is to improve skills and abilities in the JavaScript programming language. The primary objective is to expand knowledge and improve skills, with an emphasis on the ability to apply these skills effectively and proficiently in practical scenarios.
